Adding python-pymysql and magnum user

--- a/roles/dbserver/tasks/main.yml
+++ b/roles/dbserver/tasks/main.yml
@@ -1,9 +1,12 @@
-- name: Ensure mysql server and mysql python client are installed
-  apt: pkg={{ item }}
+- name: Ensure mysql server is installed
+  apt: name=mysql-server
+    
+- name: Ensure python-mysqldb and python-pymysql are installed 
+  apt: name={{ item }}
   with_items:
+    - python-pymysql
     - python-mysqldb
-    - mysql-server
-
+    
 - name: Ensure mysql binds to internal interface
   template: >
     src=etc/my.cnf 
