--- a/roles/horizon/tasks/main.yml
+++ b/roles/horizon/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: ensure horizon packages are installed 
-  apt: pkg={{ item }} 
+  apt: name={{ item }}
   with_items:
     - python-django-horizon
     - openstack-dashboard
@@ -40,11 +40,11 @@
 # Horizon css isn't loaded but it's going to be updated to django 1.9 so
 # it isn't worth to report a bug, just recreate css with next task:
 
-- name: ensure manage.py compress is executed again
-  command: /usr/share/openstack-dashboard/manage.py collectstatic --noinput --clear && /usr/share/openstack-dashboard/manage.py compress --force
-  notify: restart web services
+# - name: ensure manage.py compress is executed again
+#   command: /usr/share/openstack-dashboard/manage.py collectstatic --noinput --clear && /usr/share/openstack-dashboard/manage.py compress --force
+#   notify: restart web services
 
-- name: ensure django secret key is deleted
-  file: >-
-    path=/var/lib/openstack-dashboard/secret-key/.secret_key_store
-    state=absent
+# - name: ensure django secret key is deleted
+#   file: >-
+#     path=/var/lib/openstack-dashboard/secret-key/.secret_key_store
+#     state=absent
