Updating local_settings.py file

--- a/roles/heatserver/tasks/main.yml
+++ b/roles/heatserver/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: ensure heat packages are installed
-  apt: pkg={{ item }}
+  apt: name={{ item }}
   with_items:
     - heat-api 
     - heat-api-cfn 
