--- a/roles/magnumserver/templates/etc/magnum/magnum.conf
+++ b/roles/magnumserver/templates/etc/magnum/magnum.conf
@@ -215,7 +215,7 @@ state_path = /var/lib/magnum
 
 # The messaging driver to use, defaults to rabbit. Other drivers
 # include amqp and zmq. (string value)
-#rpc_backend = rabbit
+rpc_backend = rabbit
 
 # The default exchange under which topics are scoped. May be
 # overridden by an exchange name specified in the transport_url
@@ -386,7 +386,7 @@ host = 0.0.0.0
 #
 
 # Certificate Manager plugin. Defaults to barbican. (string value)
-#cert_manager_type = barbican
+cert_manager_type = local
 
 # Absolute path of the certificate storage directory. Defaults to
 # /var/lib/magnum/certificates/. (string value)
@@ -508,7 +508,7 @@ host = 0.0.0.0
 # Deprecated group/name - [DEFAULT]/sql_connection
 # Deprecated group/name - [DATABASE]/sql_connection
 # Deprecated group/name - [sql]/connection
-#connection = <None>
+connection = mysql+pymysql://magnum:{{ magnum_db_password }}@{{ controller_ip }}/magnum
 
 # The SQLAlchemy connection string to use to connect to the slave
 # database. (string value)
@@ -673,6 +673,16 @@ host = 0.0.0.0
 
 [keystone_authtoken]
 
+auth_uri = http://{{ controller_ip }}:5000
+auth_url = http://{{ controller_ip }}:35357
+memcached_servers = {{ controller_ip }}:11211
+auth_type = password
+project_domain_name = default
+user_domain_name = default
+project_name = service
+username = magnum
+password = {{ magnum_identity_password }}
+
 #
 # From keystonemiddleware.auth_token
 #
@@ -812,7 +822,7 @@ host = 0.0.0.0
 
 # Host providing the admin Identity API endpoint. Deprecated, use
 # identity_uri. (string value)
-auth_host = 127.0.0.1
+#auth_host = 127.0.0.1
 
 # Port of the admin Identity API endpoint. Deprecated, use
 # identity_uri. (integer value)
@@ -821,7 +831,7 @@ auth_host = 127.0.0.1
 # Protocol of the admin Identity API endpoint. Deprecated, use
 # identity_uri. (string value)
 # Allowed values: http, https
-auth_protocol = http
+#auth_protocol = http
 
 # Complete admin Identity API endpoint. This should specify the
 # unversioned root endpoint e.g. https://localhost:35357/ (string
@@ -836,13 +846,13 @@ auth_protocol = http
 #admin_token = <None>
 
 # Service username. (string value)
-admin_user = admin
+#admin_user = admin
 
 # Service user password. (string value)
-admin_password = 
+#admin_password = 
 
 # Service tenant name. (string value)
-admin_tenant_name = admin
+#admin_tenant_name = admin
 
 # Authentication type to load (unknown value)
 # Deprecated group/name - [DEFAULT]/auth_plugin
@@ -1038,7 +1048,7 @@ lock_path = /var/lock/magnum
 # The Drivers(s) to handle sending notifications. Possible values are
 # messaging, messagingv2, routing, log, test, noop (multi valued)
 # Deprecated group/name - [DEFAULT]/notification_driver
-#driver =
+driver = messaging
 
 # A URL representing the messaging driver to use for notifications. If
 # not set, we fall back to the same configuration used for RPC.
@@ -1111,7 +1121,7 @@ lock_path = /var/lock/magnum
 # The RabbitMQ broker address where a single node is used. (string
 # value)
 # Deprecated group/name - [DEFAULT]/rabbit_host
-rabbit_host = localhost
+rabbit_host = {{ controller_ip }}
 
 # The RabbitMQ broker port where a single node is used. (port value)
 # Minimum value: 0
@@ -1129,11 +1139,11 @@ rabbit_host = localhost
 
 # The RabbitMQ userid. (string value)
 # Deprecated group/name - [DEFAULT]/rabbit_userid
-rabbit_userid = guest
+rabbit_userid = {{ rabbit_user }}
 
 # The RabbitMQ password. (string value)
 # Deprecated group/name - [DEFAULT]/rabbit_password
-rabbit_password = 
+rabbit_password = {{ rabbit_password }}
 
 # The RabbitMQ login method. (string value)
 # Deprecated group/name - [DEFAULT]/rabbit_login_method
