Enabling cache in keystone

--- a/roles/keystoneserver/templates/etc/keystone/keystone.conf
+++ b/roles/keystoneserver/templates/etc/keystone/keystone.conf
@@ -38,7 +38,7 @@ admin_token = {{ admin_token }}
 
 # Similar to max_param_size, but provides an exception for token values.
 # (integer value)
-#max_token_size = 8192
+max_token_size = 255
 
 # Similar to the member_role_name option, this represents the default role ID
 # used to associate users with their default projects in the v2 API. This will
@@ -370,7 +370,7 @@ log_dir = /var/log/keystone
 # Prefix for building the configuration dictionary for the cache region. This
 # should not need to be changed unless there is another dogpile.cache region
 # with the same configuration name. (string value)
-#config_prefix = cache.oslo
+config_prefix = cache.oslo
 
 # Default TTL, in seconds, for any cached item in the dogpile.cache region.
 # This applies to any cached method that doesn't have an explicit cache
@@ -381,7 +381,7 @@ log_dir = /var/log/keystone
 # (oslo_cache.memcache_pool) or Redis (dogpile.cache.redis) be used in
 # production deployments.  Small workloads (single process) like devstack can
 # use the dogpile.cache.memory backend. (string value)
-#backend = dogpile.cache.null
+backend = oslo_cache.memcache_pool
 
 # Arguments supplied to the backend module. Specify this option once per
 # argument to be passed to the dogpile.cache backend. Example format:
@@ -394,7 +394,7 @@ log_dir = /var/log/keystone
 #proxies =
 
 # Global toggle for caching. (boolean value)
-#enabled = false
+enabled = true
 
 # Extra debugging from the cache backend (cache keys, get/set/delete/etc
 # calls). This is only really useful if you need to see the specific cache-
@@ -404,7 +404,7 @@ log_dir = /var/log/keystone
 
 # Memcache servers in the format of "host:port". (dogpile.cache.memcache and
 # oslo_cache.memcache_pool backends only). (list value)
-#memcache_servers = localhost:11211
+memcache_servers = localhost:11211
 
 # Number of seconds memcached server is considered dead before it is tried
 # again. (dogpile.cache.memcache and oslo_cache.memcache_pool backends only).
