First newton deployment finished

--- a/site-aio.yml
+++ b/site-aio.yml
@@ -1,72 +1,72 @@
 ---
 
-# - hosts: all
-#   roles:
-#     - role: common
+- hosts: all
+  roles:
+    - role: common
 
-# - hosts: controller-nodes
-#   roles:
-#     - role: dbserver
+- hosts: controller-nodes
+  roles:
+    - role: dbserver
 
-# - hosts: controller-nodes
-#   roles:
-#     - role: dbserver_population
+- hosts: controller-nodes
+  roles:
+    - role: dbserver_population
 
-# - hosts: controller-nodes
-#   roles:
-#     - role: rabbitserver
+- hosts: controller-nodes
+  roles:
+    - role: rabbitserver
 
-# - hosts: all
-#   roles:
-#     - role: openstackclient
+- hosts: all
+  roles:
+    - role: openstackclient
 
-# - hosts: controller-nodes
-#   roles:
-#     - role: keystoneserver
+- hosts: controller-nodes
+  roles:
+    - role: keystoneserver
       
-# - hosts: controller-nodes
-#   roles:
-#     - role: keystone_population
+- hosts: controller-nodes
+  roles:
+    - role: keystone_population
       
+- hosts: storage-nodes
+  roles: 
+    - role: glanceserver
+
 # - hosts: storage-nodes
 #   roles: 
-#     - role: glanceserver
+#     - role: glance_population
 
-# # - hosts: storage-nodes
-# #   roles: 
-# #     - role: glance_population
+- hosts: controller-nodes
+  roles:
+    - role: novaserver
 
-# - hosts: controller-nodes
-#   roles:
-#     - role: novaserver
+- hosts: compute-nodes
+  roles:
+    - role: novacompute
 
-# - hosts: compute-nodes
-#   roles:
-#     - role: novacompute
+- hosts: controller-nodes
+  roles:
+   - role: neutronserver
 
-# - hosts: controller-nodes
-#   roles:
-#    - role: neutronserver
+- hosts: network-nodes
+  roles:
+    - role: neutron-agents
 
-# - hosts: network-nodes
-#   roles:
-#     - role: neutron-agents
-
-# - hosts: network-nodes
-#   roles:
-#     - role: openvswitch
+- hosts: network-nodes
+  roles:
+    - role: openvswitch
 
 - hosts: controller-nodes
   roles:
     - role: horizon
 
-# - hosts: controller-nodes
-#   roles:
-#     - role: cinderserver
+- hosts: controller-nodes
+  roles:
+    - role: cinderserver
 
-# - hosts: storage-nodes
-#   roles:
-#     - role: cindervolume
+- hosts: storage-nodes
+  roles:
+    - role: cindervolume
 
 # - hosts: controller-nodes
 #   roles:
@@ -88,6 +88,6 @@
 #   roles:
 #     - role: magnumserver
 
-# - hosts: controller-nodes
-#   roles:
-#     - role: restart-services
+- hosts: controller-nodes
+  roles:
+    - role: restart-services
