--- a/roles/novaserver/templates/etc/nova/nova.conf
+++ b/roles/novaserver/templates/etc/nova/nova.conf
@@ -135,7 +135,7 @@
 #fatal_exception_format_errors = false
 
 # IP address of this host (string value)
-my_ip = {{ ansible_eth2.ipv4.address }}
+my_ip = {{ internal_ip_address.stdout }}
 
 # Block storage IP address of this host (string value)
 #my_block_storage_ip = $my_ip
