--- a/roles/cinderserver/templates/etc/cinder/cinder.conf
+++ b/roles/cinderserver/templates/etc/cinder/cinder.conf
@@ -440,7 +440,7 @@
 #fatal_exception_format_errors = false
 
 # IP address of this host (string value)
-my_ip = {{ ansible_eth2.ipv4.address }}
+my_ip = {{ internal_ip_address.stdout }}
 
 # Default glance host name or IP (string value)
 #glance_host = $my_ip
