OVS configuration in compute nodes for multinode deployment

--- a/roles/neutron-agents-compute/templates/etc/neutron/plugins/ml2/ml2_conf.ini
+++ b/roles/neutron-agents-compute/templates/etc/neutron/plugins/ml2/ml2_conf.ini
@@ -4,8 +4,7 @@
 #
 # type_drivers = local,flat,vlan,gre,vxlan
 # Example: type_drivers = flat,vlan,gre,vxlan
-type_drivers = flat,vlan,gre,vxlan
-
+type_drivers = vxlan
 
 # (ListOpt) Ordered list of network_types to allocate as tenant
 # networks. The default value 'local' is useful for single-box testing
@@ -13,7 +12,7 @@ type_drivers = flat,vlan,gre,vxlan
 #
 # tenant_network_types = local
 # Example: tenant_network_types = vlan,gre,vxlan
-tenant_network_types = gre
+tenant_network_types = vxlan
 
 # (ListOpt) Ordered list of networking mechanism driver entrypoints
 # to be loaded from the neutron.ml2.mechanism_drivers namespace.
@@ -46,25 +45,35 @@ mechanism_drivers = openvswitch
 [ml2_type_gre]
 # (ListOpt) Comma-separated list of <tun_min>:<tun_max> tuples enumerating ranges of GRE tunnel IDs that are available for tenant network allocation
 # tunnel_id_ranges =
-tunnel_id_ranges = 1:1000
+# tunnel_id_ranges = 1:1000
 
 [ml2_type_vxlan]
 # (ListOpt) Comma-separated list of <vni_min>:<vni_max> tuples enumerating
 # ranges of VXLAN VNI IDs that are available for tenant network allocation.
 #
-# vni_ranges =
+vni_ranges = 65537:69999
 
 # (StrOpt) Multicast group for the VXLAN interface. When configured, will
 # enable sending all broadcast traffic to this multicast group. When left
 # unconfigured, will disable multicast VXLAN mode.
 #
-# vxlan_group =
+vxlan_group = 239.1.1.1
 # Example: vxlan_group = 239.1.1.1
 
 [ovs]
-local_ip = {{ network_node_ip }}
-tunnel_type = gre
-enable_tunneling = True
+local_ip = {{ internal_ip_address.stdout }}
+tunnel_type = vxlan
+tunnel_bridge = br-tun
+integration_bridge = br-int
+tunnel_id_ranges = 65537:69999
+tenant_network_type = vxlan
+enable_tunneling = true
+
+[agent]
+root_helper = sudo neutron-rootwrap /etc/neutron/rootwrap.conf
+tunnel_types = vxlan
+vxlan_udp_port = 4789
+l2_population = False
 
 [securitygroup]
 # Controls if neutron security group is enabled or not.
