--- a/roles/neutron-agents-compute/tasks/main.yml
+++ b/roles/neutron-agents-compute/tasks/main.yml
@@ -16,17 +16,21 @@
 # - name: ensure nf call for IPv6 is activated
 #   sysctl: name=net.bridge.bridge-nf-call-ip6tables value=1 state=present reload=yes
 
+- name: register internal IP
+  shell: "ip a show dev {{ int_net_nic }}|grep inet|grep -v inet6|awk '{print $2}'|cut -d/ -f1"
+  register: internal_ip_address
+  
 - name: ensure plugins, agents and openvswitch packages are installed
   apt: name={{ item }}
   with_items:
     - neutron-common
     - neutron-openvswitch-agent
   
-- name: obtain service tenant id
-  shell: >-
-    keystone --os-endpoint http://{{ controller_ip }}:35357/v2.0 --os-token \
-    {{ admin_token }} tenant-get service|grep id|awk '{print $4}' 
-  register: nova_admin_tenant_id
+# - name: obtain service tenant id
+#   shell: >-
+#     keystone --os-endpoint http://{{ controller_ip }}:35357/v2.0 --os-token \
+#     {{ admin_token }} tenant-get service|grep id|awk '{print $4}' 
+#   register: nova_admin_tenant_id
           
 - name: ensure neutron.conf is configured
   template: >
@@ -36,10 +40,18 @@
   notify:
     - restart neutron agents
 
-- name: ensure ml2 plugin is configured
+# - name: ensure ml2 plugin is configured
+#   template: >
+#     src=etc/neutron/plugins/ml2/ml2_conf.ini
+#     dest=/etc/neutron/plugins/ml2/ml2_conf.ini
+#     owner=root group=root mode=0644
+#   notify:
+#     - restart neutron agents
+
+- name: ensure openvswitch agent is configured
   template: >
-    src=etc/neutron/plugins/ml2/ml2_conf.ini
-    dest=/etc/neutron/plugins/ml2/ml2_conf.ini
+    src=etc/neutron/plugins/ml2/openvswitch_agent.ini
+    dest=/etc/neutron/plugins/ml2/openvswitch_agent.ini
     owner=root group=root mode=0644
   notify:
     - restart neutron agents
