--- a/roles/novaserver/tasks/main.yml
+++ b/roles/novaserver/tasks/main.yml
@@ -10,6 +10,10 @@
     - nova-consoleproxy
     - nova-novncproxy
 
+- name: register internal IP
+  shell: "ip a show dev {{ int_net_nic }}|grep inet|grep -v inet6|awk '{print $2}'|cut -d/ -f1"
+  register: internal_ip_address
+  
 - name: ensure nova sqlite is deleted
   file: dest=/var/lib/nova/nova.sqlite state=absent
     
