Neutron agents update

--- a/roles/neutron-agents-compute/templates/etc/neutron/plugins/ml2/openvswitch_agent.ini
+++ b/roles/neutron-agents-compute/templates/etc/neutron/plugins/ml2/openvswitch_agent.ini
@@ -36,7 +36,7 @@ local_ip = {{ internal_ip_address.stdout }}
 # from the integration bridge as it won't be managed by the agent anymore.
 #
 # Example: bridge_mappings = physnet1:br-eth1
-bridge_mappings = external:br-ex
+#bridge_mappings = external:br-ex
 
 # (BoolOpt) Use veths instead of patch ports to interconnect the integration
 # bridge to physical networks. Support kernel without ovs patch port support
