--- a/roles/neutronserver/templates/etc/neutron/plugins/ml2/ml2_conf.ini
+++ b/roles/neutronserver/templates/etc/neutron/plugins/ml2/ml2_conf.ini
@@ -186,7 +186,7 @@ vni_ranges = 65537:69999
 #
 
 # Driver for security groups firewall in the L2 agent (string value)
-firewall_driver = iptables_hybrid
+firewall_driver = neutron.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver
 
 # Controls whether the neutron security group API is enabled in the server. It should be false when using no security groups or using the
 # nova security group API. (boolean value)
