--- a/roles/keystoneserver/templates/etc/keystone/keystone.conf
+++ b/roles/keystoneserver/templates/etc/keystone/keystone.conf
@@ -121,7 +121,7 @@ max_token_size = 255
 # default INFO level. (boolean value)
 # This option is deprecated for removal.
 # Its value may be silently ignored in the future.
-#verbose = true
+verbose = false
 
 # The name of a logging configuration file. This file is appended to any
 # existing logging configuration files. For details about logging configuration
@@ -445,7 +445,7 @@ driver = templated
 
 # Toggle for catalog caching. This has no effect unless global caching is
 # enabled. (boolean value)
-#caching = true
+caching = true
 
 # Time to cache catalog data (in seconds). This has no effect unless global and
 # catalog caching are enabled. (integer value)
@@ -635,7 +635,7 @@ connection = mysql+pymysql://keystone:{{ keystone_db_password }}@{{ controller_i
 
 # Toggle for domain config caching. This has no effect unless global caching is
 # enabled. (boolean value)
-#caching = true
+caching = true
 
 # TTL (in seconds) to cache domain config data. This has no effect unless
 # domain config caching is enabled. (integer value)
@@ -885,7 +885,7 @@ connection = mysql+pymysql://keystone:{{ keystone_db_password }}@{{ controller_i
 
 # Toggle for identity caching. This has no effect unless global caching is
 # enabled. (boolean value)
-#caching = true
+caching = true
 
 # Time to cache identity data (in seconds). This has no effect unless global
 # and identity caching are enabled. (integer value)
@@ -1799,7 +1799,7 @@ connection = mysql+pymysql://keystone:{{ keystone_db_password }}@{{ controller_i
 
 # Toggle for role caching. This has no effect unless global caching is enabled.
 # (boolean value)
-#caching = true
+caching = true
 
 # TTL (in seconds) to cache role data. This has no effect unless global caching
 # is enabled. (integer value)
@@ -2011,7 +2011,7 @@ provider = fernet
 
 # Toggle for token system caching. This has no effect unless global caching is
 # enabled. (boolean value)
-#caching = true
+caching = true
 
 # Time to cache tokens (in seconds). This has no effect unless global and token
 # caching are enabled. (integer value)
