--- a/roles/keystoneserver/handlers/main.yml
+++ b/roles/keystoneserver/handlers/main.yml
@@ -1,12 +1,11 @@
-- name: restart keystone
-  service: name=keystone state=restarted
+- name: restart uwsgi
+  service: name=uwsgi state=restarted
 
 - name: start keystone
   service: name=keystone state=started
 
-
-- name: restart apache2
-  service: name=apache2 state=restarted
+- name: restart nginx
+  service: name=nginx state=restarted
 
 - name: start apache2
   service: name=apache2 state=started
