Typo in UNIX socket

--- a/roles/keystoneserver/templates/etc/keystone/keystone-admin.ini
+++ b/roles/keystoneserver/templates/etc/keystone/keystone-admin.ini
@@ -4,7 +4,7 @@ workers = 10
 threads = 2
 no-orphans = true
 plugin = python
-socket = /run/keystone/keystone-admin.sock
+socket = /run/keystone-admin.sock
 chmod-socket = 664
 logto = /var/log/keystone/keystone-admin.log
 name = keystone
