--- a/roles/neutronserver/templates/etc/neutron/neutron.conf
+++ b/roles/neutronserver/templates/etc/neutron/neutron.conf
@@ -428,10 +428,10 @@ notify_nova_on_port_data_changes = True
 
 # A URL representing the messaging driver to use and its full configuration. If not set, we fall back to the rpc_backend option and driver
 # specific configuration. (string value)
-#transport_url = <None>
+transport_url = rabbit://{{ rabbit_user }}:{{ rabbit_password }}@{{ controller_ip }}:5672/
 
 # The messaging driver to use, defaults to rabbit. Other drivers include amqp and zmq. (string value)
-rpc_backend = rabbit
+#rpc_backend = rabbit
 
 # The default exchange under which topics are scoped. May be overridden by an exchange name specified in the transport_url option. (string
 # value)
@@ -1100,7 +1100,7 @@ lock_path = /var/lock/neutron
 
 # The RabbitMQ broker address where a single node is used. (string value)
 # Deprecated group/name - [DEFAULT]/rabbit_host
-rabbit_host = {{ controller_ip }}
+#rabbit_host = {{ controller_ip }}
 
 # The RabbitMQ broker port where a single node is used. (port value)
 # Minimum value: 0
@@ -1118,11 +1118,11 @@ rabbit_host = {{ controller_ip }}
 
 # The RabbitMQ userid. (string value)
 # Deprecated group/name - [DEFAULT]/rabbit_userid
-rabbit_userid = {{ rabbit_user }}
+#rabbit_userid = {{ rabbit_user }}
 
 # The RabbitMQ password. (string value)
 # Deprecated group/name - [DEFAULT]/rabbit_password
-rabbit_password = {{ rabbit_password }}
+#rabbit_password = {{ rabbit_password }}
 
 # The RabbitMQ login method. (string value)
 # Deprecated group/name - [DEFAULT]/rabbit_login_method
